# firstAgentwithStock

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/stock_predictor/: __init__.py  config.py  data.py  features.py  main.py  model.py
tests/: test_features.py
